# olive-cli

./: .gitignore  CONTRIBUTING_AGENT.md  LICENSE  MANIFEST.in  README.md  _TODO.md  pyproject.toml  pytest.ini
dotfile_defaults/: builder_mode_prompt.txt  credentials.yml  my_system_prompt.txt  preferences.yml
olive/: __main__.py  cli.py  daemon.py  env.py  gitignore.py  init.py  llm.py  logger.py  prompt_ui.py  session.py
olive/canonicals/: __init__.py  admin.py  models.py  utils.py
olive/canonicals/spec/: __init__.py  admin.py  models.py  storage.py
olive/context/: __init__.py  admin.py  injection.py  models.py  trees.py  trees_static.py  utils.py
olive/context/extractors/: __init__.py  _common.py  css.py  heuristic.py  html.py  markdown.py  parser_cache.py  python.py  tsitter_generic.py
olive/context/rollups/: __init__.py  css.py
olive/doctor/: __init__.py  admin.py
olive/dotfile_defaults/: builder_mode_prompt.txt  my_system_prompt.txt  preferences.yml
olive/preferences/: __init__.py  admin.py
olive/sandbox/: Dockerfile  Dockerfile.template  __init__.py  admin.py  entrypoint.sh  env.py  utils.py
olive/shell/: __init__.py  admin.py  dispatchers.py  utils.py
olive/tasks/: __init__.py  admin.py  models.py  runner.py  watcher.py
olive/tools/: __init__.py  admin.py  models.py  permissions.py  toolkit.py  utils.py
olive/tools/shell/: __init__.py  guard.py  mcp.py
olive/tools/spec/: __init__.py  admin.py  admin.py.bak  state.py  utils.py
olive/tools/src/: __init__.py  admin.py
olive/ui/: __init__.py  spinner.py
olive/voice/: __init__.py  admin.py  backend.py  cli.py  hud.py  manager.py  models.py  runtime.py  stt.py
tests/: conftest.py  test_asyncio_plugin.py  test_console_thread_safety.py  test_context_init.py  test_context_utils.py  test_preferences_sandbox.py  test_prompt_ui.py  test_sandbox.py  test_shell_admin.py  test_shell_dispatchers.py  test_shell_main.py  test_spec_admin.py
